added html and css code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,119 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="section-fluid-main">
+      <div class="section">
+        <div class="info-wrap mob-margin">
+          <p class="titleUp">Modern Chair</p>
+          <h2 class="heading">Telford Kursi</h2>
+          <h4 class="cost">$254<span>$530</span></h4>
 
+          <div class="section-fluid">
+            <input
+              type="radio"
+              class="descBtn"
+              name="descbtn"
+              id="desc1"
+              checked
+            />
+            <label for="desc1" >Description</label>
+
+            <input 
+            type="radio" 
+            class="descBtn" 
+            name="descbtn" 
+            id="desc2"  
+            />
+            <label for="desc2">Details</label>
+
+            <div class="section-fluid descSec accor1">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                tempora enim officia veritatis hic.
+              </p>
+            </div>
+            <div class="section-fluid descSec accor2">
+              <div class="sectionInline">
+                <p><span>80</span>cm<br />Length</p>
+              </div>
+              <div class="sectionInline">
+                <p><span>60</span>cm<br />Weight</p>
+              </div>
+              <div class="sectionInline">
+                <p><span>90</span>cm<br />Height</p>
+              </div>
+              <div class="sectionInline">
+                <p><span>17.6</span>lbs<br />Weight</p>
+              </div>
+            </div>
+          </div>
+          <h5>Choose color:</h5>
+        </div>
+        <input
+          class="colorBtn forColor1"
+          type="radio"
+          name="colorbtn"
+          id="color1"
+          checked
+        />
+        <label class="color-1" for="color1"></label>
+        <input
+          class="colorBtn forColor2"
+          type="radio"
+          name="colorbtn"
+          id="color2"
+        />
+        <label class="color-2" for="color2"></label>
+        <input
+          class="colorBtn forColor3"
+          type="radio"
+          name="colorbtn"
+          id="color3"
+        />
+        <label class="color-3" for="color3"></label>
+        <input
+          class="colorBtn forColor4"
+          type="radio"
+          name="colorbtn"
+          id="color4"
+        />
+        <label class="color-4" for="color4"></label>
+        <input
+          class="colorBtn forColor5"
+          type="radio"
+          name="colorbtn"
+          id="color5"
+        />
+        <label class="color-5" for="color5"></label>
+        <input
+          class="colorBtn forColor6"
+          type="radio"
+          name="colorbtn"
+          id="color6"
+        />
+        <label class="color-6" for="color6"></label>
+
+        <div class="backColor chair-1"></div>
+        <div class="backColor chair-2"></div>
+        <div class="backColor chair-3"></div>
+        <div class="backColor chair-4"></div>
+        <div class="backColor chair-5"></div>
+        <div class="backColor chair-6"></div>
+
+        <div class="infowrap">
+          <a href="#" class="btn"
+            ><i class="ull uilshoppingcart icon"></i>Add to cart</a
+          >
+        </div>
+
+        <div class="img-Wrap chair-1"></div>
+        <div class="img-Wrap chair-2"></div>
+        <div class="img-Wrap chair-3"></div>
+        <div class="img-Wrap chair-4"></div>
+        <div class="img-Wrap chair-5"></div>
+        <div class="img-Wrap chair-6"></div>
+
+      </div>
+    </div>
   </body>
 </html>
